--- a/02_bbb/index.html
+++ b/02_bbb/index.html
@@ -12,6 +12,10 @@
   <a href="http://www.tam-tam.co.jp/tipsnote/"><button>TipsNote に戻る</button></a>
 </main>
 
+<img class="fit-picture"
+src=".\aaa.drawio.svg"
+alt="drawioテスト">
+
 <script>
 console.log('GitHub Pages Sample');
 </script>
